--- a/style.css
+++ b/style.css
@@ -51,9 +51,8 @@ html {
 }
 
 header {
-    margin-top: 1em;
     width: 100%;
-    height: 1em;
+    height: .1rem;
     background-color: var(--color-light);
     background-attachment: fixed;
     align-items: center;
@@ -69,9 +68,9 @@ menu a button {
     font-family: 'Montserrat';
     font-weight: 500;
     font-size: 2em;
-    background-color: black;
+    background-color: var(--color-dark);
     padding: 0 5rem 0 5rem;
-    outline: 0.5rem inset magenta;
+    outline: 0.5rem inset var(--color-primary);
     width: 70rem;
     z-index: 0;
     margin-right: 1em;
@@ -80,7 +79,7 @@ menu a button {
 }
 
 menu a button:hover {
-    background-color: magenta;
+    background-color: var(--color-primary);
     outline: #ffc107;
 }
 
@@ -88,7 +87,8 @@ menu a button:hover {
 .background-container--image2,
 .background-container--image3,
 .background-container--image4,
-.background-container--image5 {
+.background-container--image5,
+.background-container--image6 {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -176,6 +176,26 @@ menu a button:hover {
 .background-container--image5 {
     background-image: url(/images/UNDER\ TREE\ SCHOOL.jpg);
     min-height: 100%;
+}
+
+.background-container--image6 {
+    background-image: url(/images/20230103_101506.jpg);
+    min-height: 100%;
+    align-items: end;
+}
+
+.map {
+    display: flex;
+    margin: 0 auto;
+    width: 100%;
+}
+
+.map iframe {
+    display: flex;
+    margin: 0 auto;
+    height: 25em;
+    width: 80%;
+    margin-bottom: 2rem;
 }
 
 footer {
